DEV-26232 Fix for overlapping button to logo on iPhone 5

--- a/static/marketing/styles/lp3/responsive.css
+++ b/static/marketing/styles/lp3/responsive.css
@@ -112,6 +112,11 @@
 
 }
 
+/* Mobile Portait Device  with max-width of 320px*/
+@media only screen and (max-width: 320px) {
+  .bf-button { font-size: 0.9em; }
+}
+
 /* Devices
 ================================================== */
 
